--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@ label {
 	display: block;
 	padding: 4px;
 }
-label > span {
+.inputPanel label > span {
 	display: inline-block;
 	width: 96px;
 	text-align: right;
 	padding-right: 8px;
+}
+#resistorValue input {
+	width: 32px;
+	text-align: right;
 }
 #resistorValue {
 	background: linear-gradient(to bottom, #ccc, #eee);
@@ -59,7 +63,7 @@ LED voltage:</span><input type="text" id="ledVoltage" list="standardLedVoltages"
 <label><span>
 LED current:</span><input type="text" id="ledForwardCurrent" value="20 mA"/></label></div>
 <div class="divider"></div>
-<div id="resistorValue" class="empty"></div>
+<div id="resistorValue" class="empty"><label id="altRView"><span>At </span><input type="text" id="altR" value="1k"/>&#x03a9;</label></div>
 <datalist id="standardLedVoltages">
 <option value="1.5 (IR)"/>
 <option value="2.0 (red, orange)"/>
